human_written_tests/WebAssembly/processed_control_flow_validation/test_block_44.wast
(assert_invalid
  (module (func $type-value-f64-vs-i32 (result f64)
    (block (result f64) (i32.const 0))
  ))
  "type mismatch"
)